# conf-portal-api

./: .gitignore  CHANGELOG.md  README.md  database_schema.dbml  example.env  gunicorn_conf.py  migrate_old_data.py  pyproject.toml
.cursor/rules/: senior-backend-engineer.mdc  standard.mdc
.github/workflows/: cicd.yml  release.yml
alembic/: env.py
alembic/versions/: 2025_08_21_2340-0970d06661bf.py  2025_08_22_0005-2e86f0460cfb.py  2025_08_22_0218-4372a1805460.py  2025_08_22_0657-62d95e59fc2d.py  2025_08_25_1954-504ce418befa.py  2025_08_26_1946-aaac852cf68d.py  2025_08_26_2016-35a4821cae9c.py  2025_08_26_2309-aa0e78da02e6.py  2025_08_27_0112-6cfe5842e229.py  2025_08_27_0224-52d8333a6ca5.py  2025_08_28_0102-f9061989ae90.py  2025_08_29_2258-d8ff6ad99ba8.py  2025_09_01_2134-80234a5bc35f.py  2025_09_09_1610-d8fa635e06eb.py  2025_09_28_0744-5e0db16a3a0e.py  2025_11_17_1710-b85513545130.py  2025_11_20_1550-a11a9424df0e.py  2026_02_07_1829-0a2b8098e586.py  2026_02_15_1622-0bf715cfcecf.py  2026_02_16_1719-c122b9632a7f.py  2026_03_04_0820-0eb014c0d533.py  2026_03_17_2008-78ae1aaa282f.py  2026_03_20_1108-566ba655f276.py  2026_03_20_1225-d68f0c5ed6b0.py  2026_03_31_1121-118fcb1bf4dd.py  2026_04_13_0203-ffc1db6c8f48.py
portal/: __init__.py  __main__.py  config.py  container.py  main.py
portal/authorization/: access_token.py
portal/cli/: __init__.py  main.py  rbac.py  superuser.py
portal/configs/: base.py
portal/exceptions/: api_base.py  auth.py
portal/handlers/: __init__.py  auth.py  conf_client_event.py  conference.py  demo.py  event_info.py  faq.py  fcm_device.py  feedback.py  file.py  notification.py  testimony.py  ticket.py  user.py  user_auth.py  workshop.py
portal/middlewares/: __init__.py  auth_middleware.py  core_request.py  custom_http.py  database_session.py  http_disconnect_probe.py  request_context.py
portal/models/: __init__.py  conference.py  demo.py  event_info.py  faq.py  fcm_device.py  feedback.py  file.py  instructor.py  language.py  location.py  log.py  notification.py  password_reset.py  rbac.py  relationships.py  testimony.py  ticket.py  workshop.py
portal/providers/: check_in_token_provider.py  jwt_provider.py  login_verification_email_provider.py  password_provider.py  password_reset_token_provider.py  refresh_token_provider.py  template_render_provider.py  thehope_ticket_provider.py  third_party_provider.py  token_blacklist_provider.py
portal/route_classes/: log_route.py
portal/routers/: __init__.py  api_root.py  auth_router.py
portal/schemas/: auth.py  base.py  file.py  mixins.py  thehope_ticket.py  user.py
portal/services/: __init__.py  thehope_ticket.py
portal/templates/: login_verification_email.html  reset_password.html
tests/fixtures/: __init__.py  container.py  context.py  handlers.py  (+3 more)
(+179 files in other folders)
