[tool.pytest.ini_options]
testpaths = [
    "portal",
    "tests"
]

[project]
name = "conf-portal-api"
version = "0.1.0"
description = ""
authors = [{ name = "Jay Hsia", email = "jayhsia1997@gmail.com" }]
readme = "README.md"
package-mode = false
requires-python = "^3.13"
dependencies = [
    # base
    "dependency-injector",
    "fastapi",
    "fastapi-limiter==0.1.6",
    "gunicorn",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    # django
    "django>=5.1,<6.0",
    "django-environ==0.12.0",
    "django-redis==5.4.0",
    "django-model-utils==5.0",
    "django-auditlog==3.0.0",
    "wagtail>=6.3,<7.0",
    "wagtail-modeladmin==2.1.0",
    "whitenoise[brotli]",
    "django-storages[google]",
    "wagtail-autocomplete==0.12.0",
    # db
    "asyncpg",
    "redis",
    "sqlalchemy",
    "psycopg2-binary==2.9.10",
    # firebase
    "firebase-admin==6.5.0",
    # security
    "pyjwt",
    # utils
    "boto3",
    "cryptography",
    "email-validator",
    "httpx",
    "ujson",
    "pytz",
    "pandas==2.2.3",
    "numpy==2.2.1",
    "phonenumbers",
    "pyotp",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "sentry-sdk[fastapi]",
    "pillow (>=11.3.0,<12.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
alembic = "*"
pytest = "*"
pytest-asyncio = "*"
pytest-mock = "*"
click = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
